--- a/theMosterGame/styles.css
+++ b/theMosterGame/styles.css
@@ -3,17 +3,17 @@
 }
 
 html {
-  font-family: 'Jost', sans-serif;
+  font-family: "Jost", sans-serif;
 }
 
 body {
   margin: 0;
+  background-color: lightblue;
 }
 
 header {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   padding: 0.5rem;
-  background-color: #880017;
   color: white;
   text-align: center;
   margin-bottom: 2rem;
